# led-foot

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_HARDWARE.md  deploy-to-pi.sh  index.html  reinitialize_serial.py
ha-integrations/: README.md
ha-integrations/led_foot/: __init__.py  config_flow.py  const.py  led_foot.py  light.py  manifest.json  switch.py
serial-led-arduino/: led-foot-hardware-setup.fzz  serial-led-arduino.ino
src/: color.rs  led_config.rs  led_scheduler.rs  led_sequence.rs  led_state.rs  led_system.rs  led_ui.rs  main.rs  on_wifi.rs  room_manager.rs  rooms.rs  serial_manager.rs  state.rs  subscribers.rs  wemo_manager.rs
static/: favorites.css  index.css  index.html  index.js  index.min.js  master.css  ranges.css
systemd/: .gitignore  led-foot-example.service  led-foot.service
templates/: index.html
