[package]
name = "led-foot"
version = "0.1.0"
authors = ["Bridger Herman <herma582@umn.edu>"]
edition = "2018"

[dependencies]
simple_logger = "1.11"
png = "0.14"
median = "0.3"
serial = "0.4"
log = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"

actix-web = "3"
actix-files = "0.3"

state = "0.4"