[package]
name = "led-foot"
version = "0.2.0"
authors = ["Bridger Herman <bridger.g.herman@gmail.com>"]
edition = "2021"

[dependencies]
png = "0.17"
median = "0.3"
serial = "0.4"
log = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"

actix-web = "4.4"
actix-files = "0.6"

state = "0.6"
toml = "0.8.10"
env_logger = "0.11.3"
